# Researchforge

./: .gitignore  CLAUDE.md  README.en.md  README.md  ft_log2.txt  ft_log3.txt  fulllog.txt  fuzzylog.txt  med_log2.txt  pyproject.toml  v1.txt
.claude/: settings.json
.claude/agents/: inference-reviewer.md
.claude/skills/add-analysis/: SKILL.md
benchmark/results/: 0.0.1.json
docs/: NEXT.md  USER_GUIDE.md  backlog.en.md  backlog.md  codex-review-brief.md  deferred-log.md  design-study-mode.md  dogfood-findings.md  loop-decisions.md  meta-analysis.md  roadmap.md  scorecard.md  web-user-testing.md
docs/analysis-catalog/: skills-inventory.en.md  skills-inventory.md
docs/mockups/: README.md  researchforge-ui-A-minimal.html  researchforge-ui-B-dashboard.html
docs/superpowers/plans/: 2026-06-12-researchforge-mvp.en.md  2026-06-12-researchforge-mvp.md
docs/superpowers/specs/: 2026-06-12-researchforge-skeleton-design.en.md  2026-06-12-researchforge-skeleton-design.md
meta_collection/: README.en.md  README.md
researchforge/: __init__.py  cli.py  study.py  study_report.py  synth.py
researchforge/benchmark/: __init__.py  cases.py  run.py
researchforge/catalog/: __init__.py  candidates.py  config_schema.py  discover.py  registry.py  schema.py  trends.py
researchforge/catalog/candidate_queue/: README.md  harvested-2026-06-12.yaml  harvested-ecology.yaml  inbox.yaml
researchforge/catalog/entries/: actuarial.yaml  ag_econ.yaml  agreement.yaml  bayesian.yaml  bayesian_advanced.yaml  bayesian_random_slopes.yaml  bayesian_survival.yaml  capture_recapture.yaml  categorical.yaml  categorical_tests.yaml  causal_did.yaml  causal_extra.yaml  choice.yaml  conditional_process.yaml  content_analysis.yaml  correlation_suite.yaml  count_models.yaml  dag_structure_learning.yaml  did_advanced.yaml  dimensionality_extra.yaml  distribution.yaml  distribution_extra.yaml  ecology.yaml  effect_sizes.yaml  efficiency.yaml  epidemiology.yaml  experimental_design.yaml  experimental_stats.yaml  field_trials.yaml  finance.yaml  forecasting.yaml  game_theory.yaml  gaussian_process_regression.yaml  gis.yaml  gwr.yaml  hydrology.yaml  importance_analysis.yaml  interpretability.yaml  irt.yaml  latent_class.yaml  (+49 more)
researchforge/cleaning/: __init__.py  plan.py
researchforge/design/: __init__.py  layout.py
researchforge/executor/: __init__.py  _branch_api.py  rbridge.py  run.py
researchforge/executor/_helpers/: __init__.py  backends.py  core.py  diagnostics.py  fig_glossary.py  formula.py  r_backends.py  report_narrative.py  viz.py
researchforge/executor/_helpers/r_backends/: __init__.py  causal.py  configurational.py  ecology.py  econometrics.py  efficiency.py  meta.py  mixed_models.py  sem.py  spatial.py  survival.py
researchforge/executor/branches/: __init__.py  _emergy_transformities.py  _lca_factors.py  actuarial.py  agreement.py  bayesian.py  bayesian_gam.py  bayesian_mcmc.py  bayesian_state_space.py  bayesian_survival.py  capture_recapture.py  categorical.py  categorical_tests.py  causal.py  causal_did.py  choice.py  conditional_process.py  configurational.py  content_analysis.py  correlation_suite.py  count_models.py  did_advanced.py  dimensionality_extra.py  distribution.py  distribution_extra.py  ecology.py  econometrics.py  effect_sizes.py  efficiency.py  epidemiology.py  experimental_design.py  experimental_stats.py  field_trials.py  finance.py  forecasting.py  game_theory.py  gaussian_process_regression.py  gwr.py  hydrology.py  importance_analysis.py  (+52 more)
researchforge/executor/branches/causal/: __init__.py  aipw.py  causal_forest.py  changes_in_changes.py  dag_structure_learning.py  double_ml.py  event_study.py  fuzzy_rdd.py  g_computation.py  gsynth.py  interrupted_time_series.py  ipw.py  iv_regression.py  mediation.py  mendelian_randomization.py  psm.py  rdd.py  staggered_did.py  synthetic_control.py
researchforge/executor/branches/ecology/: __init__.py  beta_diversity.py  differential_abundance.py  diversity_indices.py  indicator_species.py  mantel_test.py  nmds.py  permanova.py  rarefaction.py  rda.py
researchforge/executor/branches/experimental_design/: __init__.py  _shared.py  ammi.py  factorial_anova.py  gge_biplot.py  latin_square.py  power_analysis.py  rcbd.py  response_surface.py  split_plot.py
researchforge/executor/branches/network_science/: __init__.py  _common.py  centrality_suite.py  community_detection.py  epidemic_model.py  ergm.py  link_prediction.py  stochastic_block_model.py
researchforge/executor/branches/statistics/: __init__.py  basics.py  count_glm.py  discrete.py  factor.py  mixed.py  (+3 more)
researchforge/ingestion/: __init__.py  ingest.py
researchforge/profiler/: __init__.py  fingerprint.py  ingest.py  profile.py  quality.py  roles.py  scan.py  semantics.py  types.py
researchforge/quality/: __init__.py  scorecard.py
researchforge/recommender/: __init__.py  affinity.py  diagnostics.py  goals.py  match.py  novelty.py  recommend.py  rigor.py  scoring.py
researchforge/web/: DESIGN.md  __init__.py  app.py  service.py
researchforge/web/static/: index.html
scripts/: setup.py
skills_inbox/: README.en.md  README.md
tests/: conftest.py  test_acf_pacf.py  test_actuarial.py  test_affinity.py  test_ahp.py  test_aipw.py  test_ammi.py  test_ancova.py  test_anova_oneway.py  test_ardl_bounds.py  test_bart.py  test_bayesian_ab_test.py  test_bayesian_gam.py  test_bayesian_mcmc.py  test_bayesian_poisson_rate.py  test_bayesian_proportion.py  test_bayesian_random_slopes.py  test_bayesian_sem.py  test_bayesian_state_space.py  test_bayesian_survival.py  test_benchmark.py  test_beta_diversity.py  test_bland_altman.py  test_bootstrap_ci.py  test_branch_discovery_resilience.py  test_brant_test.py  test_callaway_santanna.py  test_candidates.py  test_canonical_correlation.py  test_capture_recapture.py  test_catalog.py  test_catalog_consistency.py  test_catalog_yaml_valid.py  test_causal_forest.py  test_centrality_suite.py  test_chaisemartin_did.py  test_changes_in_changes.py  test_chi_square_test.py  test_choice.py  test_cjk_fonts.py  (+260 more)
tests/fixtures/: dogfood.py
(+8 files in other folders)
