[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "researchforge"
version = "0.0.1"
description = "Data-driven automated research engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
rf = "researchforge.cli:main"

[tool.setuptools.packages.find]
include = ["researchforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
